loopfor.LoopFor.scala.error
Compilation error:
LoopFor:1: error: not found: value nbpas
nbpas=0
^LoopFor:4: error: not found: value nbpas
  nbpas=nbpas+1
  ^LoopFor:7: error: not found: value nbpas
for (retour<-1 to nbpas){
                  ^