loopfor.LoopFor.scala.code
nbpas=0
while (estSurBiscuit!=true){
  avance()
  nbpas=nbpas+1
}
prendBiscuit()
for (retour<-1 to nbpas){
  recule()
}
poseBiscuit()